--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "bolt-expo-nativewind",
-    "slug": "bolt-expo-nativewind",
-    "version": "1.0.3",
+    "name": "Fingerboard Con",
+    "slug": "fingerboard-con",
+    "version": "3.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -11,7 +11,9 @@
 
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "3",
+      "bundleIdentifier": "com.fingerboardcon.app",
+      "buildNumber": "5",
+      "icon": "./assets/images/icon.png",
       "infoPlist": {
         "NSCameraUsageDescription": "We use your camera so you can record fingerboard clips for the event.",
         "NSMicrophoneUsageDescription": "We use your microphone to capture audio while recording clips.",
@@ -20,7 +22,12 @@
     },
 
     "android": {
-      "versionCode": 3,
+      "package": "com.fingerboardcon.app",
+      "versionCode": 5,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/icon.png",
+        "backgroundColor": "#4CAF50"
+      },
       "permissions": [
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
