--- a/app.json
+++ b/app.json
@@ -8,19 +8,18 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.fingerboardcon.app",
-      "buildNumber": "5",
+      "buildNumber": "6",
       "icon": "./assets/images/icon.png",
       "infoPlist": {
         "NSCameraUsageDescription": "We use your camera so you can record fingerboard clips for the event.",
         "NSMicrophoneUsageDescription": "We use your microphone to capture audio while recording clips.",
-        "NSPhotoLibraryUsageDescription": "We access your photo library so you can pick clips to upload."
+        "NSPhotoLibraryUsageDescription": "We access your photo library so you can pick clips to upload.",
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
-
     "android": {
       "package": "com.fingerboardcon.app",
       "versionCode": 5,
@@ -32,16 +31,15 @@
         "android.permission.CAMERA",
         "android.permission.RECORD_AUDIO",
         "android.permission.READ_MEDIA_VIDEO",
-        "android.permission.READ_MEDIA_IMAGES"
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
-
     "web": {
       "bundler": "metro",
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       "expo-font",
@@ -65,9 +63,14 @@
         }
       ]
     ],
-
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "007abce3-7c10-4267-874e-2d0709de130b"
+      }
     }
   }
 }
