--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "eas-cli": "^16.26.0",
     "typescript": "~5.9.2"
   }
 }
