--- a/app.json
+++ b/app.json
@@ -32,6 +32,11 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.READ_MEDIA_VIDEO",
         "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_MEDIA_VIDEO",
+        "android.permission.READ_MEDIA_IMAGES",
         "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
@@ -71,6 +76,12 @@
       "eas": {
         "projectId": "007abce3-7c10-4267-874e-2d0709de130b"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/007abce3-7c10-4267-874e-2d0709de130b"
     }
   }
 }
