--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "fingerboard-con",
     "version": "2.0.0",
     "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
