--- a/app.json
+++ b/app.json
@@ -60,6 +60,14 @@
         {
           "photosPermission": "Allow Fingerboard Con to access your photos for uploads."
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#FFD700",
+          "sounds": []
+        }
       ]
     ],
 
