--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
+    "expo-device": "^8.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "^0.32.14",
     "expo-router": "6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
